--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd frontend-web && npm run build",
-    "install-frontend-web": "cd frontend-web && npm install",
-    "frontend-web": "cd frontend-web && npm start",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend-web && npm run build --prefix frontend-web",
     "start": "node server.js",
-    "dev": "concurrently -n 'server,frontend-web' -c 'red,green'  \"nodemon server.js\" \"npm run frontend-web\""
+    "heroku-postbuild": "cd frontend-web && npm install && npm run build"
+    
   },
   "author": "",
   "license": "ISC",
