changed server to axios

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-CLIENT_ID=879943642897-02pvovvjshcbqjcngg89sed8huio4fm1.apps.googleusercontent.com
-CLIENT_SECRET=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
+# CLIENT_ID=879943642897-02pvovvjshcbqjcngg89sed8huio4fm1.apps.googleusercontent.com
+# CLIENT_SECRET=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
 
 KEY=19900203Fs.
