--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,12 @@
 
 # dependencies
 /node_modules
+/*.env
 /frontend-web/node_modules
 /frontend-web/build
 /.pnp
 .pnp.js
+
 
 # testing
 /coverage
