--- a/config.env
+++ b/config.env
@@ -1,3 +1,3 @@
 PORT=8080
 MONGO_URI=mongodb+srv://fatihProject:19900203@webdevops.s7xwh.mongodb.net/MerStackProjectFatih
-NODE_ENV=production
+NODE_ENV=development
