--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    
-    "install-frontend-web": "cd frontend-web && npm install",
-    "frontend-web": "cd frontend-web && npm start",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend-web && npm run build --prefix frontend-web",
-    "dev": "concurrently -n 'server,frontend-web' -c 'red,green'  \"nodemon server.js\" \"npm run frontend-web\""
-    
-  },
+   
+    "build": "cd frontend-web && npm run build",
+    "install-client": "cd frontend-web && npm install",
+    "heroku-postbuild": "npm run install-client && npm run build",
+    "server": "nodemon server.js",
+    "develop": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix frontend-web\"",
+    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix frontend-web\""
+},
   "author": "",
   "license": "ISC",
   "engines": {
