--- a/config.env
+++ b/config.env
@@ -1,3 +1,3 @@
-PORT=8080
+PORT=5000
 MONGO_URI=mongodb+srv://fatihProject:19900203@webdevops.s7xwh.mongodb.net/MerStackProjectFatih
-NODE_ENV=development
+NODE_ENV=production
