--- a/config.env
+++ b/config.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb+srv://fatihProject:19900203@webdevops.s7xwh.mongodb.net/MerStackProjectFatih
+MONGO_URI=mongodb+srv://fatihProject:19900203@webdevops.s7xwh.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 NODE_ENV=production
