addinf criticla infos

--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+
   "scripts": {
-   
-    "build": "cd frontend-web && npm run build",
-    "install-client": "cd frontend-web && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build",
-    "server": "nodemon server.js",
-    "develop": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix frontend-web\"",
-    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix frontend-web\""
-},
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js",
+    
+    "install-frontend-web": "cd frontend-web && npm install",
+    "frontend-web": "cd frontend-web && npm start",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend-web && npm run build --prefix frontend-web",
+    "dev": "concurrently -n 'server,frontend-web' -c 'red,green'  \"nodemon server.js\" \"npm run frontend-web\""
+    
+  },
   "author": "",
   "license": "ISC",
   "engines": {
