--- a/config.env
+++ b/config.env
@@ -1,3 +1,4 @@
 
 MONGO_URI=mongodb+srv://fatihProject:19900203@webdevops.s7xwh.mongodb.net/MerStackProjectFatih
 NODE_ENV=production
+KEY=19900203Fs.
