updated env and mongoDB

--- a/config.env
+++ b/config.env
@@ -1,4 +1,7 @@
 
-MONGO_URI=mongodb+srv://fatihProject:19900203@webdevops.s7xwh.mongodb.net/MerStackProjectFatih
+MONGO_URI=  mongodb://localhost:27017/mern_database
+MONGOCOMPAS= mongodb://localhost:27017/mern_database
+MONGODBATLAS = mongodb+srv://frank-mern-2022:19900203fs@webdevops.s7xwh.mongodb.net/MerStackProjectFatih?retryWrites=true&w=majority
+
 NODE_ENV=production
 KEY=19900203Fs.
